# ghc-deepseq

./: ghc-deepseq.cabal
src/GHC/: DeepSeq.hs
